100% completed - responsive design

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#projects">Projects</a>
           </li>
           <li>
-            <a href="#">Contact</a>
+            <a href="#contact">Contact</a>
           </li>
         </ul>
       </nav>
@@ -40,8 +40,7 @@
       <section id="about" class="about-section">
         <h1>About me</h1>
         <p>A designer + Developer</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum cumque quidem repellendus vero debitis non ut maxime corrupti vitae, dolore modi porro aliquid expedita excepturi adipisci ad esse harum recusandae!
-        Omnis error earum sunt sequi odio, obcaecati corrupti modi, mollitia beatae saepe fugit, autem cumque iste? Ullam, harum accusantium optio nostrum ex quo ab, maxime sequi incidunt ut adipisci voluptatum?</p>
+        <p>I am PinkHat's owner, I am a student at The National Polytechnic Institute of Mexico, I am studying computer science, artificial intelligence, cybersecurity, quantum computing and networking in different academies (Microsoft, Cisco, Alura, Google and MetabaseQ). I love to continuously learn about new technologies, gain new skills to keep information protected, apply marketing knowledge to promote products and reach the right audience, develop and design web pages.I am excited to apply my knowledge and skills for the new digital age, participating in a collaborative and friendly environment.</p>
       </section> 
       
       <!-- Projects section -->
@@ -76,31 +75,30 @@
       <section id="contact" class="contact-section">
         <div class="contact-header">
           <h2>Contact me!</h2>
-          <p>Let's collaborate...</p>
         </div>
         <div class="contact-links">
           <!-- Social media -->
-          <a href="#" target="_blank" rel="noreferrer" class="btn contact-details">
+          <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer" class="btn contact-details">
             <!-- icon -->
-            <i></i>
+            <i class="fa-brands fa-linkedin"></i>
             LinkedIn
           </a>
           <!-- Social media -->
-          <a id="profile-link" href="#" target="_blank" rel="noreferrer" class="btn contact-details">
+          <a id="profile-link" href="https://www.freecodecamp.org/XimenaMael99" target="_blank" rel="noreferrer" class="btn contact-details">
             <!-- icon -->
-            <i></i>
+            <i class="fa-brands fa-free-code-camp"></i>
             freeCodeCamp
           </a>
           <!-- Social media -->
-          <a href="#" target="_blank" rel="noreferrer" class="btn contact-details">
+          <a href="https://github.com/Azriel1909" target="_blank" rel="noreferrer" class="btn contact-details">
             <!-- icon -->
-            <i></i>
+            <i class="fa-brands fa-github"></i>
             GitHub
           </a>
           <!-- Social media -->
-          <a href="#" target="_blank" rel="noreferrer" class="btn contact-details">
+          <a href="xtoledori@gmail.com" target="_blank" rel="noreferrer" class="btn contact-details">
             <!-- icon -->
-            <i></i>
+            <i class="fa-solid fa-envelope"></i>
             Email
           </a>
         </div>
