--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             GitHub
           </a>
           <!-- Social media -->
-          <a href="xtoledori@gmail.com" target="_blank" rel="noreferrer" class="btn contact-details">
+          <a href=""href="mailto:xtoledori@gmail.com?Subject=Quiero más información."  target="_blank" rel="noreferrer" class="btn contact-details">
             <!-- icon -->
             <i class="fa-solid fa-envelope"></i>
             Email
