--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
       <section id="about" class="about-section">
         <h1>About me</h1>
-        <p>A designer + Developer</p>
         <p>I am PinkHat's owner, I am a student at The National Polytechnic Institute of Mexico, I am studying computer science, artificial intelligence, cybersecurity, quantum computing and networking in different academies (Microsoft, Cisco, Alura, Google and MetabaseQ). I love to continuously learn about new technologies, gain new skills to keep information protected, apply marketing knowledge to promote products and reach the right audience, develop and design web pages.I am excited to apply my knowledge and skills for the new digital age, participating in a collaborative and friendly environment.</p>
+        <a href="#" target="_blank" rel="noreferrer" class="btn btn-show-cv">Show CV</a>
       </section> 
       
       <!-- Projects section -->
@@ -81,31 +81,31 @@
           <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer" class="btn contact-details">
             <!-- icon -->
             <i class="fa-brands fa-linkedin"></i>
-            LinkedIn
+            <p>LinkedIn</p>
           </a>
           <!-- Social media -->
           <a id="profile-link" href="https://www.freecodecamp.org/XimenaMael99" target="_blank" rel="noreferrer" class="btn contact-details">
             <!-- icon -->
             <i class="fa-brands fa-free-code-camp"></i>
-            freeCodeCamp
+            <p>freeCodeCamp</p>
           </a>
           <!-- Social media -->
           <a href="https://github.com/Azriel1909" target="_blank" rel="noreferrer" class="btn contact-details">
             <!-- icon -->
             <i class="fa-brands fa-github"></i>
-            GitHub
+            <p>GitHub</p>
           </a>
           <!-- Social media -->
-          <a href=""href="mailto:xtoledori@gmail.com?Subject=Quiero más información."  target="_blank" rel="noreferrer" class="btn contact-details">
+          <a href="mailto:xtoledori@gmail.com?Subject=Quiero contactar contigo." target="_blank" rel="noreferrer" class="btn contact-details">
             <!-- icon -->
             <i class="fa-solid fa-envelope"></i>
-            Email
+            <p>Email</p>
           </a>
         </div>
       </section>
     </main>
     <footer>
-      <p>&copy Created for <a href="#" target="_blank" rel="noreferrer">PinkHat</a></p>
+      <p>&copy Created for <a href="#about" rel="noreferrer">PinkHat</a></p>
     </footer>
   </body>
 </html>
