--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/9c48faf641.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="img/logo.png" />
   </head>
   <body>
     <main>
@@ -40,7 +41,7 @@
       <section id="about" class="about-section">
         <h1>About me</h1>
         <p>I am PinkHat's owner, I am a student at The National Polytechnic Institute of Mexico, I am studying computer science, artificial intelligence, cybersecurity, quantum computing and networking in different academies (Microsoft, Cisco, Alura, Google and MetabaseQ). I love to continuously learn about new technologies, gain new skills to keep information protected, apply marketing knowledge to promote products and reach the right audience, develop and design web pages.I am excited to apply my knowledge and skills for the new digital age, participating in a collaborative and friendly environment.</p>
-        <a href="#" target="_blank" rel="noreferrer" class="btn btn-show-cv">Show CV</a>
+        <a href="cv.html" target="_blank" rel="noreferrer" class="btn btn-show-cv">Show CV</a>
       </section> 
       
       <!-- Projects section -->
