--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500;600&family=Ubuntu+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/logo.png" />
   </head>
   <body>
@@ -64,7 +64,7 @@
         <article>
           <h2>Web Development</h2>
           <ul>
-            <li>Web Development Fundamentals issued by Instituto de Economía internacional at University of Alicante (IEI).</li>
+            <li>Web Development Fundamentals Certification issued by Instituto de Economía internacional at University of Alicante (IEI).</li>
             <li>Participation in the Data Science Weekend by Microsoft Learn Student Ambassadors.
             </li>
           </ul>
