--- a/cv.html
+++ b/cv.html
@@ -14,8 +14,10 @@
   <body>
     <!-- Menu -->
     <nav id="navbar">
-      <header><h2>Ximena Toledo</h2></header>
-      <img src="https://azriel1909.github.io/PORTFOLIO/img/Xime2.jpg" loading="lazy" class="profile-img"/>
+      <header>
+        <h1>Ximena Toledo</h1>
+        <img src="https://azriel1909.github.io/PORTFOLIO/img/Xime2.jpg" loading="lazy" class="profile-img"/>
+      </header>
       <ul>
         <li>
           <a class="nav-link" href="#academic-path">Academic Path</a>
@@ -40,13 +42,13 @@
         </li>
       </ul>
     </nav>
-    <!-- part 1 -->
-    <main id="main-doc">
+    <!-- End Menu -->
+    <main id="main-doc" class="main-doc">
+      <!-- Part 1 -->
       <section class="main-section" id="academic-path">
         <header>
-          <h1>Academic Path</h1>
+          <h2>Academic Path</h2>
         </header>
-        <article>
           <ul>
             <li>2019 - today: <strong>Computer Engineering</strong> at The National Polytechnic Institute of Mexico (IPN).</li>
             <li>2020 - today: <strong>Junior Researcher</strong> in The Institutional Research Training Program at The National Polytechnic Institute of Mexico (BEIFI).</li>
@@ -54,69 +56,74 @@
             <li><strong>Technician in Data Networks</strong> at INTTELMEX.</li>
             <li><strong>Finder</strong> at INTTELMEX.</li>
           </ul>
-        </article>
       </section>
-    <!-- part 2 -->
+      <!-- End Part 1 -->
+      <!-- Part 2 -->
       <section class="main-section" id="certifications">
         <header>
-          <h1>Certifications</h1>
+          <h2>Certifications</h2>
         </header>
-        <article>
-          <h2>Web Development</h2>
+
+          <h3>Web Development</h3>
           <ul>
             <li>Web Development Fundamentals Certification issued by Instituto de Economía internacional at University of Alicante (IEI).</li>
             <li>Participation in the Data Science Weekend by Microsoft Learn Student Ambassadors.
             </li>
           </ul>
-          <h2>UX Design</h2>
+
+          <h3>UX Design</h3>
           <ul>
             <li>Web Development Fundamentals issued by Instituto de Economía internacional at University of Alicante (IEI).</li>
             <li>Participation in the Data Science Weekend by Microsoft Learn Student Ambassadors.
             </li>
           </ul>
-          <h2>Digital Marketing</h2>
+
+          <h3>Digital Marketing</h3>
           <ul>
             <li>Digital Marketing Certification issued by The Open University.</li>
             <li>Google Ads Certification.</li>
             <li>Google Ads Video Certification.</li>
           </ul>
-          <h2>Cybersecurity</h2>
+
+          <h3>Cybersecurity</h3>
           <ul>
             <li>Cybersecurity at Work Certification issued by the Institute of Cybersecurity (incibe).</li>
             <li>The Development of Mobile Apps Certification issued by the Complutense University of Madrid.</li>
             <li>Introduction to Cybersecurity Certification issued by Cisco Networking Academy.</li>
             <li>Cybersecurity Essentials Certification issued by Cisco Networking Academy.</li>
           </ul>
-          <h2>Finance</h2>
+
+          <h3>Finance</h3>
           <ul>
             <li>Participation in the <strong>Financial Education</strong> program "Cuentas Contigo"
               by Junior Achievement and Citibanamex.</li>
               <li>Financial Education Certification issued by CONDUSEF.</strong>.</li>
           </ul>
-          <h2>Cloud Computing</h2>
+
+          <h3>Cloud Computing</h3>
           <ul>
             <li>Cloud Computing Certification issued by The School of Industrial Organization (EOI).</li>
             <li>Azure Fundamentals Certification issued by Microsoft.</li>
           </ul>
-        </article>
       </section>
-    <!-- part 3 -->
+      <!-- End Part 2 -->
+      <!-- Part 3 -->
       <section class="main-section" id="languages">
         <header>
-          <h1>Languages</h1>
+          <h2>Languages</h2>
         </header>
-        <article>
-          <p>Spanish - Native language</p>
-          <p>English - advanced level</p>
-          <p>German - basic level</p>
-        </article>
+          <ul>
+            <li>Spanish - Native Language</li>
+            <li>English - Advanced Level</li>
+            <li>German - Basic Level</li>
+          </ul>
       </section>
-      <!-- part 4 -->
+      <!-- End Part 3 -->
+      <!-- Part 4 -->
       <section class="main-section" id="softskills">
         <header>
-          <h1>Softskills</h1>
+          <h2>Softskills</h2>
         </header>
-        <article>
           <ul>
             <li>Empathy</li>
             <li>Creativity</li>
@@ -135,14 +142,14 @@
             <li>Brainstorming</li>
             <li>Ethical decision making.</li>
           </ul>
-        </article>
       </section>
-    <!-- part 5 -->
+      <!-- End Part 4 -->
+      <!-- Part 5 -->
       <section class="main-section" id="hardskills">
         <header>
-          <h1>Hardskills</h1>
+          <h2>Hardskills</h2>
         </header>
-        <article>
+
           <h3>Computer software knowledge</h3>
           <ul>
             <li>Linux OS</li>
@@ -159,6 +166,7 @@
             <li>VirtualBox</li>
             <li>Eclipse IDE</li>
           </ul>
+
           <h3>Computer software knowledge</h3>
           <ul>
             <li>UX/UI Design</li>
@@ -167,6 +175,7 @@
             <li>Sketching</li>
             <li>Data visualization</li>
           </ul>
+
           <h3>Web Development</h3>
           <ul>
             <li>HTML</li>
@@ -177,6 +186,7 @@
             <li>Sass</li>
             <li>Bootstrap</li>
           </ul>
+
           <h3>MS Office</h3>
           <ul>
             <li>Word</li>
@@ -184,6 +194,7 @@
             <li>OneNote</li>
             <li>React</li>
           </ul>
+
           <h3>Programming Skills</h3>
           <ul>
             <li>Java</li>
@@ -193,32 +204,34 @@
             <li>C#</li>
             <li>Python</li>
           </ul>
+
           <h3>Database</h3>
           <ul>
             <li>SQL</li>
           </ul>
-        </article>
+
       </section>
-    <!-- part 6 -->
+      <!-- End Part 5 -->
+      <!-- Part 6 -->
       <section class="main-section" id="conferences">
         <header>
-          <h1>Conferences</h1>
+          <h2>Conferences</h2>
         </header>
-        <article>
-          <p>YouTube video about <a href="https://www.youtube.com/watch?v=A7T0klx7ARw&ab_channel=ADDAGROUP" target="_blank" rel="noreferrer">Quantum Computing conference at IPN.</a></p>
-        </article>
+          <h3>2022</h3>
+          <p>YouTube video about <a href="https://www.youtube.com/watch?v=A7T0klx7ARw&ab_channel=ADDAGROUP" target="_blank" rel="noreferrer">Quantum Computing Conference at IPN.</a></p>
       </section>
-      <!-- part 7 -->
+      <!-- End Part 6 -->      
+      <!-- Part 7 -->
       <section class="main-section" id="additional-activities">
         <header>
-          <h1>Additional Activities</h1>
+          <h2>Additional Activities</h2>
         </header>
-        <article>
+          <h3>2022</h3>
           <p>YouTube video about <a href="https://www.youtube.com/watch?v=dt9oy5JyZXs&ab_channel=ADDAGROUP" target="_blank" rel="noreferrer">Quantum Computing and Cryptography.</a></p>
-        </article>
       </section>
+      <!-- End Part 7 -->  
       <footer>
-          <h3>&#169 <a href="index.html" target="_blank" rel="noreferrer">PinkHat.</a></h3>
+        <h3>&#169 <a href="index.html" target="_blank" rel="noreferrer">PinkHat 2022</a></h3>
       </footer>
     </main>
   </body>
