--- a/cv.html
+++ b/cv.html
@@ -55,6 +55,7 @@
             <li><strong>Installation and Repair Technician Computer Equipment</strong> at INTTELMEX</li>
             <li><strong>Technician in Data Networks</strong> at INTTELMEX.</li>
             <li><strong>Finder</strong> at INTTELMEX.</li>
+            <li><strong>IT Technician</strong> at INTTELMEX.</li>
           </ul>
       </section>
       <!-- End Part 1 -->
@@ -69,13 +70,19 @@
             <li>Web Development Fundamentals Certification issued by Instituto de Economía internacional at University of Alicante (IEI).</li>
             <li>Participation in the Data Science Weekend by Microsoft Learn Student Ambassadors.
             </li>
+            <li>FrontEnd Development Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>Business Agility Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>Business Agility Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>Beginner in Programming Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>Responsive Web Design Certification issued by <a href="https://www.freecodecamp.org/XimenaMael99" target="_blank" rel="noreferrer">freeCodeCamp</a></li>
           </ul>
 
           <h3>UX Design</h3>
           <ul>
-            <li>Web Development Fundamentals issued by Instituto de Economía internacional at University of Alicante (IEI).</li>
-            <li>Participation in the Data Science Weekend by Microsoft Learn Student Ambassadors.
-            </li>
+            <li>Create low fidelity page schematics and prototypes Certification issued by Google.</li>
+            <li>First steps in the UX design process: Empathize, define and ideate Certification issued by Google.</li>
+            <li>Basics of user experience design Certification issued by Google.</li>
+            <li>Color Theory Certification issued by TELMEX.</li>
           </ul>
 
           <h3>Digital Marketing</h3>
@@ -83,14 +90,18 @@
             <li>Digital Marketing Certification issued by The Open University.</li>
             <li>Google Ads Certification.</li>
             <li>Google Ads Video Certification.</li>
+            <p>Participation in the digital Marketing Training by Google and JA Americas.</p>
           </ul>
 
-          <h3>Cybersecurity</h3>
+          <h3>Cybersecurity and Networking</h3>
           <ul>
             <li>Cybersecurity at Work Certification issued by the Institute of Cybersecurity (incibe).</li>
             <li>The Development of Mobile Apps Certification issued by the Complutense University of Madrid.</li>
             <li>Introduction to Cybersecurity Certification issued by Cisco Networking Academy.</li>
             <li>Cybersecurity Essentials Certification issued by Cisco Networking Academy.</li>
+            <li>Introduction to Packet Tracer Certification issued by Cisco Networking Academy.</li>
+            <li>Computer Architecture Certification issued by TELMEX.</li>
+            <li>Networking Fundamentals Certification issued by TELMEX.</li>
           </ul>
 
           <h3>Finance</h3>
@@ -98,6 +109,7 @@
             <li>Participation in the <strong>Financial Education</strong> program "Cuentas Contigo"
               by Junior Achievement and Citibanamex.</li>
               <li>Financial Education Certification issued by CONDUSEF.</strong>.</li>
+              <li>Advanced EXCEL Certification issued by TELMEX.</li>
           </ul>
 
           <h3>Cloud Computing</h3>
@@ -192,7 +204,6 @@
             <li>Word</li>
             <li>Powerpoint</li>
             <li>OneNote</li>
-            <li>React</li>
           </ul>
 
           <h3>Programming Skills</h3>
@@ -228,6 +239,7 @@
         </header>
           <h3>2022</h3>
           <p>YouTube video about <a href="https://www.youtube.com/watch?v=dt9oy5JyZXs&ab_channel=ADDAGROUP" target="_blank" rel="noreferrer">Quantum Computing and Cryptography.</a></p>
+          <p>Participation in ASUME TELMEX program.</p>
       </section>
       <!-- End Part 7 -->  
       <footer>
