--- a/cv.html
+++ b/cv.html
@@ -79,9 +79,9 @@
 
           <h3>UX Design</h3>
           <ul>
-            <li>Create low fidelity page schematics and prototypes Certification issued by Google.</li>
-            <li>First steps in the UX design process: Empathize, define and ideate Certification issued by Google.</li>
-            <li>Basics of user experience design Certification issued by Google.</li>
+            <li>Create low fidelity page schematics and prototypes Certification <a href="https://www.coursera.org/account/accomplishments/verify/LA22LNEPGFFK" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+            <li>First steps in the UX design process: Empathize, define and ideate Certification <a href="https://www.coursera.org/account/accomplishments/verify/J3NRE3D7CMZY" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+            <li>Basics of user experience design Certification issued by Google <a href="https://www.coursera.org/account/accomplishments/verify/RHMZR2TPCN8T" target="_blank" rel="noreferrer">issued by Google</a>.</li>
             <li>Color Theory Certification issued by TELMEX.</li>
           </ul>
 
