--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,7 @@
     <nav id="navbar">
       <header>
         <h1>Ximena Toledo</h1>
-        <img src="https://azriel1909.github.io/PORTFOLIO/img/Xime2.jpg" loading="lazy" class="profile-img"/>
+        <img src="./img/img.jpg" loading="lazy" class="profile-img"/>
       </header>
       <ul>
         <li>
@@ -102,6 +102,7 @@
             <li>Introduction to Packet Tracer Certification issued by Cisco Networking Academy.</li>
             <li>Computer Architecture Certification issued by TELMEX.</li>
             <li>Networking Fundamentals Certification issued by TELMEX.</li>
+            <li>Participation in the <strong>MetabaseQ Hacking Labs</strong>.</li>
           </ul>
 
           <h3>Finance</h3>
