profile cv  updated

--- a/cv.html
+++ b/cv.html
@@ -115,6 +115,11 @@
 
           <h3>Cloud Computing</h3>
           <ul>
+            <li>Fundamentals of Quantum Computing issued by The Linux Foundation.</li>
+          </ul>
+
+          <h3>Quantum Computing</h3>
+          <ul>
             <li>Cloud Computing Certification issued by The School of Industrial Organization (EOI).</li>
             <li>Azure Fundamentals Certification issued by Microsoft.</li>
           </ul>
@@ -180,7 +185,7 @@
             <li>Eclipse IDE</li>
           </ul>
 
-          <h3>Computer software knowledge</h3>
+          <h3>Design knowledge</h3>
           <ul>
             <li>UX/UI Design</li>
             <li>UX Research</li>
