profile portfolio  updated

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!-- Welcome section -->
       <section id="welcome-section" class="welcome-section">
         <h1>Hey! I am Ximena</h1>
-        <p>A designer + Developer</p>
+        <p>Designer + Developer</p>
       </section>  
 
       <section id="about" class="about-section">
