--- a/cv.html
+++ b/cv.html
@@ -103,6 +103,8 @@
             <li>Computer Architecture Certification issued by TELMEX.</li>
             <li>Networking Fundamentals Certification issued by TELMEX.</li>
             <li>Participation in the <strong>MetabaseQ Hacking Labs</strong>.</li>
+            <li>Ethical Hacking edition 1 issued by <a href="https://verified.sertifier.com/en/verify/36463906518332?ref=email" target="_blank" rel="noreferrer">Hacker Mentor</a></li>
+            <li>Ethical Hacking edition 2 issued by <a href="https://verified.sertifier.com/en/verify/36463906518332?ref=email" target="_blank" rel="noreferrer">Hacker Mentor</a></li>
           </ul>
 
           <h3>Finance</h3>
