--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     </main>
     <footer>
       <p>&copy Created for <a href="#about" rel="noreferrer">PinkHat</a></p>
+      <img src="./img/pinkhat.png" loading="lazy" class="pinkhat-img"/>
     </footer>
   </body>
 </html>
