cv updated: attended Events added

--- a/cv.html
+++ b/cv.html
@@ -247,7 +247,12 @@
         </header>
           <h3>2022</h3>
           <p>YouTube video about <a href="https://www.youtube.com/watch?v=dt9oy5JyZXs&ab_channel=ADDAGROUP" target="_blank" rel="noreferrer">Quantum Computing and Cryptography.</a></p>
-          <p>Participation in ASUME TELMEX program.</p>
+          Participation in ASUME TELMEX program.
+          <h3>Attended Events</h3>
+          <ul>
+            <li>Marcello Zillo (2022, August) Zero Trust. Microsoft Security Series</li>
+            <li>Fernando SIlva (2022, August) ZAdvanced threats: Microsoft Defender Suite in Action. Microsoft Security Series</li>
+          </ul>
       </section>
       <!-- End Part 7 -->  
       <footer>
