cv updated: attended Events added

--- a/cv.html
+++ b/cv.html
@@ -237,7 +237,11 @@
           <h2>Conferences</h2>
         </header>
           <h3>2022</h3>
-          <p>YouTube video about <a href="https://www.youtube.com/watch?v=A7T0klx7ARw&ab_channel=ADDAGROUP" target="_blank" rel="noreferrer">Quantum Computing Conference at IPN.</a></p>
+          <ul>
+            <li>
+              YouTube video about <a href="https://www.youtube.com/watch?v=A7T0klx7ARw&ab_channel=ADDAGROUP" target="_blank" rel="noreferrer">Quantum Computing Conference at IPN.</a>
+            </li>
+          </ul>
       </section>
       <!-- End Part 6 -->      
       <!-- Part 7 -->
@@ -246,12 +250,14 @@
           <h2>Additional Activities</h2>
         </header>
           <h3>2022</h3>
-          <p>YouTube video about <a href="https://www.youtube.com/watch?v=dt9oy5JyZXs&ab_channel=ADDAGROUP" target="_blank" rel="noreferrer">Quantum Computing and Cryptography.</a></p>
-          Participation in ASUME TELMEX program.
+          <ul>
+            <li>YouTube video about <a href="https://www.youtube.com/watch?v=dt9oy5JyZXs&ab_channel=ADDAGROUP" target="_blank" rel="noreferrer">Quantum Computing and Cryptography.</a></li>
+            <li>Participation in ASUME TELMEX program.</li>
+          </ul>
           <h3>Attended Events</h3>
           <ul>
             <li>Marcello Zillo (2022, August) Zero Trust. Microsoft Security Series</li>
-            <li>Fernando SIlva (2022, August) ZAdvanced threats: Microsoft Defender Suite in Action. Microsoft Security Series</li>
+            <li>Fernando SIlva (2022, August) Advanced threats: Microsoft Defender Suite in Action. Microsoft Security Series</li>
           </ul>
       </section>
       <!-- End Part 7 -->  
