--- a/index.html
+++ b/index.html
@@ -68,6 +68,51 @@
           <img src="https://images.unsplash.com/photo-1519993443254-e135c95cdea0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Product: Magazine Design" loading="lazy" class="project-img"/>
           <p class="project-title">Magazine Design</p>
         </a>
+        <!-- Project section 5 -->
+        <a href="https://azriel1909.github.io/RETO-PINKHANG/" target="_blank" rel="noreferrer" class="project project-tile">
+          <img src="https://images.unsplash.com/photo-1611996575749-79a3a250f948?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Product: HangMan Game" loading="lazy" class="project-img"/>
+          <p class="project-title">HangMan Game</p>
+        </a>
+        <!-- Project section 6 -->
+        <a href="https://azriel1909.github.io/PINK-CITY-MODEL/" target="_blank" rel="noreferrer" class="project project-tile">
+          <img src="https://images.unsplash.com/photo-1523540383849-4ae4125acd6f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Product: City Model" loading="lazy" class="project-img"/>
+          <p class="project-title">City Model</p>
+        </a>
+        <!-- Project section 7 -->
+        <a href="https://azriel1909.github.io/KAFFEE-PROJECT/" target="_blank" rel="noreferrer" class="project project-tile">
+          <img src="https://images.unsplash.com/photo-1495474472287-4d71bcdd2085?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8Y29mZmV8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Product: Pink Coffee Shop" loading="lazy" class="project-img"/>
+          <p class="project-title">Pink Coffee Shop</p>
+        </a>
+        <!-- Project section 8 -->
+        <a href="https://azriel1909.github.io/BALANCE-PINK-SHEET/" target="_blank" rel="noreferrer" class="project project-tile">
+          <img src="https://images.unsplash.com/photo-1611974789855-9c2a0a7236a3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Product: Balance Sheet" loading="lazy" class="project-img"/>
+          <p class="project-title">Balance Sheet</p>
+        </a>
+        <!-- Project section 9 -->
+        <a href="https://azriel1909.github.io/PINK-FORMULAR/" target="_blank" rel="noreferrer" class="project project-tile">
+          <img src="https://images.unsplash.com/photo-1588702547919-26089e690ecc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Product: Registration Form" loading="lazy" class="project-img"/>
+          <p class="project-title">Registration Form</p>
+        </a>
+        <!-- Project section 10 -->
+        <a href="https://azriel1909.github.io/LAYOUTS-CSS/" target="_blank" rel="noreferrer" class="project project-tile">
+          <img src="https://images.unsplash.com/photo-1487014679447-9f8336841d58?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1005&q=80" alt="Product: Product Landing Page" loading="lazy" class="project-img"/>
+          <p class="project-title">Product Landing Page</p>
+        </a>
+        <!-- Project section 11 -->
+        <a href="https://azriel1909.github.io/TRIBUTE-PAGE-FLAMINGOS/" target="_blank" rel="noreferrer" class="project project-tile">
+          <img src="https://images.unsplash.com/photo-1488137881216-5bea4b9bac2b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1144&q=80" alt="Product: Description Page" loading="lazy" class="project-img"/>
+          <p class="project-title">Description Page</p>
+        </a>
+        <!-- Project section 12 -->
+        <a href="https://azriel1909.github.io/PinkBrush-Project/home.html" target="_blank" rel="noreferrer" class="project project-tile">
+          <img src="https://images.unsplash.com/photo-1553733322-5e506a6001b6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Product: Art Shop" loading="lazy" class="project-img"/>
+          <p class="project-title">Art Shop</p>
+        </a>
+        <!-- Project section 13 -->
+        <a href="https://azriel1909.github.io/PinkBrush-Project/home.html" target="_blank" rel="noreferrer" class="project project-tile">
+          <img src="https://images.unsplash.com/photo-1668901382969-8c73e450a1f5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt="Product: Tic Tac Toe Game" loading="lazy" class="project-img"/>
+          <p class="project-title">Tic Tac Toe Game</p>
+        </a>
       </div>
         <a href="https://github.com/Azriel1909?tab=repositories" target="_blank" rel="noreferrer" class="btn btn-show-all">Show all</a>
       </section>
