--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/9c48faf641.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="img/logo.png" />
+    <link rel="shortcut icon" href="img/pinkhat.png" />
   </head>
   <body>
     <main>
