--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <p class="project-title">Art Shop</p>
         </a>
         <!-- Project section 13 -->
-        <a href="https://azriel1909.github.io/PinkBrush-Project/home.html" target="_blank" rel="noreferrer" class="project project-tile">
+        <a href="https://azriel1909.github.io/GATITOO/" target="_blank" rel="noreferrer" class="project project-tile">
           <img src="https://images.unsplash.com/photo-1668901382969-8c73e450a1f5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt="Product: Tic Tac Toe Game" loading="lazy" class="project-img"/>
           <p class="project-title">Tic Tac Toe Game</p>
         </a>
