--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         <h1 class="projects-header">Some of my projects</h1>
       <div class="projects-grid">
         <!-- Project section 1 -->
+        <a href="https://azriel1909.github.io/UX-PINK-CASE-STUDY/" target="_blank" rel="noreferrer" class="project project-tile">
+          <img src="https://images.unsplash.com/photo-1531403009284-440f080d1e12?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="UX project: GymTraini " loading="lazy"class="project-img"/>
+          <p class="project-title">UX project: GymTraini</p>
+        </a>
+        <!-- Project section 1 -->
         <a href="https://azriel1909.github.io/PINK-PRODUCT-PAGE/" target="_blank" rel="noreferrer" class="project project-tile">
           <img src="https://images.unsplash.com/photo-1463171379579-3fdfb86d6285?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Project: product page " loading="lazy"class="project-img"/>
           <p class="project-title">Product Landing Page</p>
