conference link added

--- a/cv.html
+++ b/cv.html
@@ -251,7 +251,7 @@
         </header>
           <h3>2022</h3>
           <ul>
-            <li>YouTube video about <a href="https://www.youtube.com/watch?v=dt9oy5JyZXs&ab_channel=ADDAGROUP" target="_blank" rel="noreferrer">Quantum Computing and Cryptography.</a></li>
+            <li>YouTube video about <a href="https://www.youtube.com/watch?v=A7T0klx7ARw&t=128s&ab_channel=ADDAGROUP" target="_blank" rel="noreferrer">Quantum Computing and Cryptography.</a></li>
             <li>Participation in ASUME TELMEX program.</li>
           </ul>
           <h3>Attended Events</h3>
