--- a/cv.html
+++ b/cv.html
@@ -8,16 +8,18 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/pinkhat.png" />
   </head>
   <body>
     <!-- Menu -->
     <nav id="navbar">
-      <header>
-        <h1>Ximena Toledo</h1>
-        <img src="./img/img.jpg" loading="lazy" class="profile-img"/>
-      </header>
+      <section class="profile-sec">
+        <header>
+          <h1>Ximena Toledo</h1>
+          <img src="./img/img.jpg" loading="lazy" class="profile-img"/>
+        </header>
+      </section>
       <ul>
         <li>
           <a class="nav-link" href="#academic-path">Academic Path</a>
@@ -39,6 +41,9 @@
         </li>
         <li>
           <a class="nav-link" href="#additional-activities">Additional Activities</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#Contact">Contact</a>
         </li>
       </ul>
     </nav>
@@ -260,9 +265,27 @@
             <li>Fernando SIlva (2022, August) Advanced threats: Microsoft Defender Suite in Action. Microsoft Security Series</li>
           </ul>
       </section>
-      <!-- End Part 7 -->  
+      <!-- End Part 7 -->
+      <section class="main-section" id="#Contact">
+        <header>
+          <h2>Contact</h2>
+        </header>
+          <ul>
+            <li>
+              Website: <a href="index.html" target="_blank" rel="noreferrer">PinkHat 2023</a>
+            </li>
+            <li>
+              Email: <a href="mailto:xtoledori@gmail.com?Subject=Quiero contactar contigo." target="_blank" rel="noreferrer">xtoledori@gmail.com
+              </a>
+            </li>
+            <li>
+              LinkedIn: <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Ximena Toledo
+              </a>
+            </li>
+          </ul>
+      </section> 
       <footer>
-        <h3>&#169 <a href="index.html" target="_blank" rel="noreferrer">PinkHat 2022</a></h3>
+        <h3></h3>
       </footer>
     </main>
   </body>
