--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/9c48faf641.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="img/pinkhat.png" />
@@ -35,18 +35,17 @@
       <!-- Welcome section -->
       <section id="welcome-section" class="welcome-section">
         <h1>Hey! I am Ximena</h1>
-        <p>Designer + Developer</p>
+        <h2>Designer + Developer</h2>
       </section>  
-
       <section id="about" class="about-section">
-        <h1>About me</h1>
+        <h2>About me</h2>
         <p>I am PinkHat's owner, I am a student at The National Polytechnic Institute of Mexico, I am studying computer science, artificial intelligence, cybersecurity, quantum computing and networking in different academies (Microsoft, Cisco, Alura, Google and MetabaseQ). I love to continuously learn about new technologies, gain new skills to keep information protected, apply marketing knowledge to promote products and reach the right audience, develop and design web pages.I am excited to apply my knowledge and skills for the new digital age, participating in a collaborative and friendly environment.</p>
         <a href="cv.html" target="_blank" rel="noreferrer" class="btn btn-show-cv">Show CV</a>
       </section> 
       
       <!-- Projects section -->
       <section id="projects" class="projects-section">
-        <h1 class="projects-header">Some of my projects</h1>
+        <h2 class="projects-header">Some of my projects</h2>
       <div class="projects-grid">
 
         <a href="https://azriel1909.github.io/UX-PINK-CASE-STUDY-3/" target="_blank" rel="noreferrer" class="project project-tile">
@@ -167,7 +166,7 @@
       </section>
     </main>
     <footer>
-      <p>&copy Created for <a href="#about" rel="noreferrer">PinkHat</a></p>
+      <p>&copy Created for PinkHat 2023</p>
     </footer>
   </body>
 </html>
