--- a/cv.html
+++ b/cv.html
@@ -266,7 +266,7 @@
           </ul>
       </section>
       <!-- End Part 7 -->
-      <section class="main-section" id="#Contact">
+      <section class="main-section" id="Contact">
         <header>
           <h2>Contact</h2>
         </header>
