--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </a>
 
         <a href="https://azriel1909.github.io/UX-PINK-CASE-STUDY-2/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1576153192396-180ecef2a715?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80" alt="UX project: GymTraini " loading="lazy"class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1576153192396-180ecef2a715?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80" alt="UX project: GymTraini " loading="lazy" class="project-img"/>
           <p class="project-title">UX project: WabiByte Website Design</p>
         </a>
         <!-- Project section 1 -->
@@ -177,6 +177,12 @@
             <!-- icon -->
             <i class="fa-solid fa-envelope"></i>
             <p>Email</p>
+          </a>
+          <!-- Social media -->
+          <a href="https://youtube.com/@toledoriveraximena2990" target="_blank" rel="noreferrer" class="btn contact-details">
+            <!-- icon -->
+            <i class="fa-brands fa-youtube"></i>
+            <p>YouTube</p>
           </a>
         </div>
       </section>
