--- a/cv.html
+++ b/cv.html
@@ -82,11 +82,21 @@
             <li>Responsive Web Design Certification issued by <a href="https://www.freecodecamp.org/XimenaMael99" target="_blank" rel="noreferrer">freeCodeCamp</a></li>
           </ul>
 
+          <h3>Mobile Development</h3>
+          <ul>
+            <li>The Development of Mobile Apps Certification issued by the Complutense University of Madrid.</li>
+          </ul>
+
           <h3>UX Design</h3>
           <ul>
             <li>Create low fidelity page schematics and prototypes Certification <a href="https://www.coursera.org/account/accomplishments/verify/LA22LNEPGFFK" target="_blank" rel="noreferrer">issued by Google</a>.</li>
             <li>First steps in the UX design process: Empathize, define and ideate Certification <a href="https://www.coursera.org/account/accomplishments/verify/J3NRE3D7CMZY" target="_blank" rel="noreferrer">issued by Google</a>.</li>
             <li>Basics of user experience design Certification issued by Google <a href="https://www.coursera.org/account/accomplishments/verify/RHMZR2TPCN8T" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+            <li>Responsive Web Designs in Adobe XD <a href="https://www.coursera.org/account/accomplishments/certificate/ARAGURYP7SKM" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+            <li>Design a user experience for a public interest initiative and prepare for work <a href="https://www.coursera.org/account/accomplishments/certificate/7QTLLKU9DGKK" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+            <li>Create high-fidelity prototypes and designs in Figma<a href="https://www.coursera.org/account/accomplishments/certificate/YACGTYZH46C2" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+            <li>Conduct UX research<a href="https://www.coursera.org/account/accomplishments/certificate/SH22U87ZAQVV" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+            <li>Specialized Program - Google User Experience (UX) Design <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/7V3V6KP6VN7Y" target="_blank" rel="noreferrer">issued by Google</a>.</li>
             <li>Color Theory Certification issued by TELMEX.</li>
           </ul>
 
@@ -101,7 +111,6 @@
           <h3>Cybersecurity and Networking</h3>
           <ul>
             <li>Cybersecurity at Work Certification issued by the Institute of Cybersecurity (incibe).</li>
-            <li>The Development of Mobile Apps Certification issued by the Complutense University of Madrid.</li>
             <li>Introduction to Cybersecurity Certification issued by Cisco Networking Academy.</li>
             <li>Cybersecurity Essentials Certification issued by Cisco Networking Academy.</li>
             <li>Introduction to Packet Tracer Certification issued by Cisco Networking Academy.</li>
@@ -126,9 +135,20 @@
             <li>Azure Fundamentals Certification issued by Microsoft.</li>
           </ul>
 
+          <h3>Data Base</h3>
+          <ul>
+            <li>SQL training with MySQL Certification issued by <a href="https://app.aluracursos.com/degree/certificate/a33979f2-7264-4a61-addf-f188daf221b0" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+          </ul>
+
+          <h3>Data Science</h3>
+          <ul>
+            <li>SQL training with MySQL Certification issued by <a href="https://app.aluracursos.com/degree/certificate/a33979f2-7264-4a61-addf-f188daf221b0" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+          </ul>
+
           <h3>Quantum Computing</h3>
           <ul>
             <li>Fundamentals of Quantum Computing issued by The Linux Foundation.</li>
+            <li>Quantum Winter School with Microsoft Azure Quantum issued by Microsoft and <a href="https://www.credly.com/badges/27379115-7062-4239-a3da-21825b23287e/public_url" target="_blank" rel="noreferrer">Qubit x Qubit.</a></li>
           </ul>
       </section>
       <!-- End Part 2 -->
