Certification Section Added

--- a/cv.html
+++ b/cv.html
@@ -17,7 +17,7 @@
       <section class="profile-sec">
         <header>
           <h1>Ximena Toledo</h1>
-          <img src="./img/img.jpg" loading="lazy" class="profile-img"/>
+          <img src="https://avatars.githubusercontent.com/u/85806922?v=4" loading="lazy" class="profile-img"/>
         </header>
       </section>
       <ul>
@@ -56,7 +56,7 @@
         </header>
           <ul>
             <li>2019 - today: <strong>Computer Engineering</strong> at The National Polytechnic Institute of Mexico (IPN).</li>
-            <li>2020 - today: <strong>Junior Researcher</strong> in The Institutional Research Training Program at The National Polytechnic Institute of Mexico (BEIFI).</li>
+            <li>2020 - today: <strong>Junior Researcher</strong> at The Institutional Research Training Program at The National Polytechnic Institute of Mexico (BEIFI).</li>
             <li><strong>Installation and Repair Technician Computer Equipment</strong> at INTTELMEX</li>
             <li><strong>Technician in Data Networks</strong> at INTTELMEX.</li>
             <li><strong>Finder</strong> at INTTELMEX.</li>
@@ -73,13 +73,16 @@
           <h3>Web Development</h3>
           <ul>
             <li>Web Development Fundamentals Certification issued by Instituto de Economía internacional at University of Alicante (IEI).</li>
-            <li>Participation in the Data Science Weekend by Microsoft Learn Student Ambassadors.
-            </li>
-            <li>FrontEnd Development Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
-            <li>Business Agility Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
-            <li>Business Agility Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
             <li>Beginner in Programming Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>FrontEnd Development Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
             <li>Responsive Web Design Certification issued by <a href="https://www.freecodecamp.org/XimenaMael99" target="_blank" rel="noreferrer">freeCodeCamp</a></li>
+          </ul>
+
+          <h3>Soft Skills</h3>
+          <ul>
+            <li>Training Personal Development Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>Business Agility Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>Entrepreneurship Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
           </ul>
 
           <h3>Mobile Development</h3>
@@ -89,14 +92,22 @@
 
           <h3>UX Design</h3>
           <ul>
-            <li>Create low fidelity page schematics and prototypes Certification <a href="https://www.coursera.org/account/accomplishments/verify/LA22LNEPGFFK" target="_blank" rel="noreferrer">issued by Google</a>.</li>
-            <li>First steps in the UX design process: Empathize, define and ideate Certification <a href="https://www.coursera.org/account/accomplishments/verify/J3NRE3D7CMZY" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+
             <li>Basics of user experience design Certification issued by Google <a href="https://www.coursera.org/account/accomplishments/verify/RHMZR2TPCN8T" target="_blank" rel="noreferrer">issued by Google</a>.</li>
-            <li>Responsive Web Designs in Adobe XD <a href="https://www.coursera.org/account/accomplishments/certificate/ARAGURYP7SKM" target="_blank" rel="noreferrer">issued by Google</a>.</li>
-            <li>Design a user experience for a public interest initiative and prepare for work <a href="https://www.coursera.org/account/accomplishments/certificate/7QTLLKU9DGKK" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+
+            <li>First steps in the UX design process: Empathize, define and ideate Certification <a href="https://www.coursera.org/account/accomplishments/verify/J3NRE3D7CMZY" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+            
+            <li>Create low fidelity page schematics and prototypes Certification <a href="https://www.coursera.org/account/accomplishments/verify/LA22LNEPGFFK" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+
+            <li>Conduct UX research <a href="https://www.coursera.org/account/accomplishments/certificate/SH22U87ZAQVV" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+
             <li>Create high-fidelity prototypes and designs in Figma<a href="https://www.coursera.org/account/accomplishments/certificate/YACGTYZH46C2" target="_blank" rel="noreferrer">issued by Google</a>.</li>
-            <li>Conduct UX research<a href="https://www.coursera.org/account/accomplishments/certificate/SH22U87ZAQVV" target="_blank" rel="noreferrer">issued by Google</a>.</li>
-            <li>Specialized Program - Google User Experience (UX) Design <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/7V3V6KP6VN7Y" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+
+            <li>Responsive Web Designs in Adobe XD <a href="https://www.coursera.org/account/accomplishments/certificate/ARAGURYP7SKM" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+
+            <li>Design a user experience for a public interest initiative and prepare for work <a href="https://www.coursera.org/account/accomplishments/certificate/7QTLLKU9DGKK" target="_blank" rel="noreferrer">issued by Google</a>.</li>
+
+            <li>Specialized Program - Google User Experience (UX) Design <a href="https://www.coursera.org/account/accomplishments/specialization/7V3V6KP6VN7Y" target="_blank" rel="noreferrer">issued by Google</a>.</li>
             <li>Color Theory Certification issued by TELMEX.</li>
           </ul>
 
@@ -111,14 +122,15 @@
           <h3>Cybersecurity and Networking</h3>
           <ul>
             <li>Cybersecurity at Work Certification issued by the Institute of Cybersecurity (incibe).</li>
-            <li>Introduction to Cybersecurity Certification issued by Cisco Networking Academy.</li>
-            <li>Cybersecurity Essentials Certification issued by Cisco Networking Academy.</li>
-            <li>Introduction to Packet Tracer Certification issued by Cisco Networking Academy.</li>
+            <li>Introduction to Cybersecurity Certification issued by <a href="https://www.credly.com/badges/633d9672-d8ef-4079-8570-a19419ae018a/public_url" target="_blank" rel="noreferrer">Cisco Networking Academy</a>.</li>
+            <li>Cybersecurity Essentials Certification issued by <a href="https://www.credly.com/badges/b633e914-7500-4f37-830a-c57acb87070c/public_url" target="_blank" rel="noreferrer">Cisco Networking Academy</a>.</li>
+            <li>Introduction to Packet Tracer Certification issued <a href="https://www.credly.com/badges/5b6f47f2-2080-4eca-8777-60f0d548c8e5/public_url" target="_blank" rel="noreferrer">Cisco Networking Academy</a>.</li>
             <li>Computer Architecture Certification issued by TELMEX.</li>
             <li>Networking Fundamentals Certification issued by TELMEX.</li>
             <li>Participation in the <strong>MetabaseQ Hacking Labs</strong>.</li>
             <li>Ethical Hacking edition 1 issued by <a href="https://verified.sertifier.com/en/verify/36463906518332?ref=email" target="_blank" rel="noreferrer">Hacker Mentor</a></li>
             <li>Ethical Hacking edition 2 issued by <a href="https://verified.sertifier.com/en/verify/36463906518332?ref=email" target="_blank" rel="noreferrer">Hacker Mentor</a></li>
+            <li>Ethical Hacking edition 3 issued by <a href="https://verified.sertifier.com/en/verify/38669668958764/?ref=email" target="_blank" rel="noreferrer">Hacker Mentor</a></li>
           </ul>
 
           <h3>Finance</h3>
@@ -132,7 +144,7 @@
           <h3>Cloud Computing</h3>
           <ul>
             <li>Cloud Computing Certification issued by The School of Industrial Organization (EOI).</li>
-            <li>Azure Fundamentals Certification issued by Microsoft.</li>
+            <li>Azure Fundamentals Certification issued by <a href="https://www.credly.com/badges/7cb187b0-6bba-44fe-8fde-6e1dcf8a18c4/public_url" target="_blank" rel="noreferrer">Microsoft</a>.</li>
           </ul>
 
           <h3>Data Base</h3>
@@ -142,12 +154,18 @@
 
           <h3>Data Science</h3>
           <ul>
-            <li>SQL training with MySQL Certification issued by <a href="https://app.aluracursos.com/degree/certificate/a33979f2-7264-4a61-addf-f188daf221b0" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>Participation in the Data Science Weekend by Microsoft Learn Student Ambassadors.
+            </li>
+            <li>Python for Data Science: Introduction to the Language Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>Python for Data Science: Basic Functions, Libraries and Pandas Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>Python Pandas: Data treatment and analysis Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>Machine Learning: Classification with SKLearn Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>Machine Learning: Model optimization through hyperparameters Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
           </ul>
 
           <h3>Quantum Computing</h3>
           <ul>
-            <li>Fundamentals of Quantum Computing issued by The Linux Foundation.</li>
+            <li>Fundamentals of Quantum Computing issued by <a href="https://www.credly.com/badges/449019b3-ceba-41d4-96c6-797177b294e0/public_url" target="_blank" rel="noreferrer">The Linux Foundation</a>.</li>
             <li>Quantum Winter School with Microsoft Azure Quantum issued by Microsoft and <a href="https://www.credly.com/badges/27379115-7062-4239-a3da-21825b23287e/public_url" target="_blank" rel="noreferrer">Qubit x Qubit.</a></li>
           </ul>
       </section>
@@ -209,7 +227,6 @@
             <li>Git & GitHub</li>
             <li>Bash</li>
             <li>VirtualBox</li>
-            <li>Eclipse IDE</li>
           </ul>
 
           <h3>Design knowledge</h3>
@@ -219,6 +236,7 @@
             <li>Color Theory</li>
             <li>Sketching</li>
             <li>Data visualization</li>
+            <li>Figma</li>
           </ul>
 
           <h3>Web Development</h3>
@@ -230,12 +248,13 @@
             <li>Tailwind</li>
             <li>Sass</li>
             <li>Bootstrap</li>
+            <li>PHP</li>
           </ul>
 
           <h3>MS Office</h3>
           <ul>
             <li>Word</li>
-            <li>Powerpoint</li>
+            <li>PowerPoint</li>
             <li>OneNote</li>
           </ul>
 
@@ -247,13 +266,15 @@
             <li>C++</li>
             <li>C#</li>
             <li>Python</li>
+            <li>PHP</li>
+            <li>Q#</li>
           </ul>
 
           <h3>Database</h3>
           <ul>
             <li>SQL</li>
+            <li>MySQL server</li>
           </ul>
-
       </section>
       <!-- End Part 5 -->
       <!-- Part 6 -->
