--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <!-- Contact section -->
       <section id="contact" class="contact-section">
         <div class="contact-header">
-          <h2>Contact me!</h2>
+          <h2>Socials</h2>
         </div>
         <div class="contact-links">
           <!-- Social media -->
@@ -183,6 +183,11 @@
             <!-- icon -->
             <i class="fa-brands fa-youtube"></i>
             <p>YouTube</p>
+          </a>
+          <a href="https://www.credly.com/users/ximena-toledo-rivera/badges" target="_blank" rel="noreferrer" class="btn contact-details">
+            <!-- icon -->
+            <i class="fa-solid fa-id-badge"></i>
+            <p>Credly</p>
           </a>
         </div>
       </section>
