--- a/cv.html
+++ b/cv.html
@@ -251,9 +251,9 @@
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
-            <li>React</li>
-            <li>Tailwind</li>
-            <li>Sass</li>
+            <li>ReactJs</li>
+            <li>TailwindCSS</li>
+            <li>Sass (Syntactically Awesome Style Sheets)</li>
             <li>Bootstrap</li>
             <li>PHP</li>
           </ul>
