Ladies and getlemen, I have finished the university

--- a/cv.html
+++ b/cv.html
@@ -56,7 +56,7 @@
           <h2>Academic Path</h2>
         </header>
           <ul>
-            <li>2019 - today: <strong>Computer Engineering</strong> at The National Polytechnic Institute of Mexico (IPN).</li>
+            <li>2019 - 2023: <strong>Computer Engineering</strong> at The National Polytechnic Institute of Mexico (IPN).</li>
             <li>2020 - today: <strong>Junior Researcher</strong> at The Institutional Research Training Program at The National Polytechnic Institute of Mexico (BEIFI).</li>
             <li><strong>Installation and Repair Technician Computer Equipment</strong> at INTTELMEX</li>
             <li><strong>Technician in Data Networks</strong> at INTTELMEX.</li>
