--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@
             <i class="fa-solid fa-id-badge"></i>
             <p>Credly</p>
           </a>
+          <a href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer" class="btn contact-details">
+            <!-- icon -->
+            <i class="fa-brands fa-microsoft"></i>
+            <p>Microsoft Learn</p>
+          </a>
         </div>
       </section>
     </main>
