--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
         <div class="about-container">
           <div class="items-container">
             <h2>About me</h2>
-            <p>I am PinkHat's owner, I am a student at The National Polytechnic Institute of Mexico, I am studying computer science, artificial intelligence, cybersecurity, quantum computing and networking in different academies (Microsoft, Cisco, Alura, Google and MetabaseQ). I love to continuously learn about new technologies, gain new skills to keep information protected, apply marketing knowledge to promote products and reach the right audience, develop and design web pages. I am excited to apply my knowledge and skills for the new digital age, participating in a collaborative and friendly environment.</p>
+            <p>Hello! I'm Ximena Toledo, PinkHat's owner, a Computer Engineer, and I have excelled as a Junior Researcher in the Institutional Research Training Program (PIFI). Throughout my academic journey, I've gained experience in the field of technology as an Installation and Repair Technician for Computer Equipment, as well as in data network design and IT solutions.</p>
+            <br>
+            <p>My quest for knowledge has led me to obtain a series of certifications, including Web Development, Mobile Development, UX Design, Digital Marketing, Cybersecurity and Networks, IT Support, Finance, Cloud Computing, Databases, Data Science, and even Quantum Computing. I am committed to continuous learning and applying my skills to interesting projects.</p>
             <a href="cv.html" target="_blank" rel="noreferrer" class="btn-1">Show CV</a>
           </div>
         </div>
