--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
             <p>LinkedIn</p>
           </a>
           <!-- Social media -->
-          <a id="profile-link" href="https://www.freecodecamp.org/XimenaMael99" target="_blank" rel="noreferrer" class="btn contact-details">
+          <a href="https://youtube.com/@toledoriveraximena2990" target="_blank" rel="noreferrer" class="btn contact-details">
             <!-- icon -->
-            <i class="fa-brands fa-free-code-camp"></i>
-            <p>freeCodeCamp</p>
+            <i class="fa-brands fa-youtube"></i>
+            <p>YouTube</p>
           </a>
           <!-- Social media -->
           <a href="https://github.com/Azriel1909" target="_blank" rel="noreferrer" class="btn contact-details">
@@ -181,11 +181,12 @@
             <p>Email</p>
           </a>
           <!-- Social media -->
-          <a href="https://youtube.com/@toledoriveraximena2990" target="_blank" rel="noreferrer" class="btn contact-details">
+          <a id="profile-link" href="https://www.freecodecamp.org/XimenaMael99" target="_blank" rel="noreferrer" class="btn contact-details">
             <!-- icon -->
-            <i class="fa-brands fa-youtube"></i>
-            <p>YouTube</p>
+            <i class="fa-brands fa-free-code-camp"></i>
+            <p>freeCodeCamp</p>
           </a>
+          <!-- Social media -->
           <a href="https://www.credly.com/users/ximena-toledo-rivera/badges" target="_blank" rel="noreferrer" class="btn contact-details">
             <!-- icon -->
             <i class="fa-solid fa-id-badge"></i>
